[DOCS-7907] Re-apply new footer text and fix central alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -302,7 +302,6 @@ nav.navbar .navbar-lang {
 .footer-links {
   list-style: none;
   padding: .5em .5em 0 .5em;
-  margin: 0;
   text-align: center;
   color: rgba(255, 255, 255, .7);
   font-size: 14px;
